Add game's initial logic
Add event listeners for each board box and refactor dom.js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <h1>Battleship Game</h1>
             <p>Whereas disregard and contempt for human rights have resulted</p>
         </div>
+        
+        <div class="game_turn">
+
+        </div>
+
         <div class="game_boards">
             <section data-player="A" class="board">
                 <!--
