Create a modal to show the winner of the game

--- a/index.html
+++ b/index.html
@@ -21,111 +21,22 @@
 
         <div class="game_boards">
             <section data-player="A" class="board">
-                <!--
-                <div class="coords-number coords" data-coord-letter="A" data-coord-number="1"></div>
-                <div class="coords" data-coord-letter="B"></div>
-                <div class="coords" data-coord-letter="C"></div>
-                <div class="coords" data-coord-letter="D"></div>
-                <div class="coords" data-coord-letter="E"></div>
-                <div class="coords" data-coord-letter="F"></div>
-                <div class="coords" data-coord-letter="G"></div>
-                <div class="coords" data-coord-letter="H"></div>
-                <div class="coords" data-coord-letter="I"></div>
-                <div class="coords" data-coord-letter="J"></div>
-                <div data-coord-number="2"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="3"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="4"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="5"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="6"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="7"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="8"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="9"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div data-coord-number="10"></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                -->
             </section>
             <section data-player="B" class="board enemy">
             </section>
+        </div>
+
+        <div class="game_win-modal">
+            <div class="dark-overlay"></div>
+            <div class="win_msg">
+                <h2 class="win_msg-title"></h2>
+                <p>Want to play again?</p>
+                <button type="button" class="restart-btn">
+                    RESTART
+                </button>
+                
+                <img class="win_msg-img" src="./images/deco-ship.png" alt="A warship in the sea">
+            </div>
         </div>
     </section>
 </body>
