--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./scripts/dom.js" type="module" defer></script>
+    <script src="./ui/dom.js" type="module" defer></script>
     <title>Battleship Game</title>
 </head>
 <body>
