Add some HOF in dom.js and create an app.js file

--- a/app/index.html
+++ b/app/index.html
@@ -5,34 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./ui/dom.js" type="module" defer></script>
+    <script src="./app.js" type="module" defer></script>
     <title>Battleship Game</title>
 </head>
 <body>
-    <section class="game content-margin">
-        <div class="game_header">
-            <h1>Battleship Game</h1>
-        </div>
-        
-        <div class="game_turn">
-
-        </div>
-
-        <div class="game_boards">
-        </div>
-
-        <div class="game_win-modal">
-            <div class="dark-overlay"></div>
-            <div class="win_msg">
-                <h2 class="win_msg-title"></h2>
-                <p>Want to play again?</p>
-                <button type="button" class="restart-btn">
-                    RESTART
-                </button>
-                
-                <img class="win_msg-img" src="./images/deco-ship.png" alt="A warship in the sea">
-            </div>
-        </div>
-    </section>
 </body>
 </html>
