--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./animation.css">
     <script src="./app.js" type="module" defer></script>
     <title>Battleship Game</title>
 </head>
-<body>
+<body class="content-margin">
 </body>
 </html>
