--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css" type="text/css">
     <link rel="stylesheet" href="./animation.css" type="text/css">
     <script src="./app.js" type="module" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pubsub-js/1.9.4/pubsub.min.js"
+        integrity="sha512-GGfBS5/WTGwqhjo4nCGzQEWrX3+gkjF2G/JHs3cfhpynh5Lck+qqCwofvZlHoKuv/2P0B0Oo4Mq3Xa3Beyyf9A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Battleship Game</title>
 </head>
 <body class="content-margin">
